--- a/react_repeat/package.json
+++ b/react_repeat/package.json
@@ -25,6 +25,7 @@
       "react-app/jest"
     ]
   },
+  
   "browserslist": {
     "production": [
       ">0.2%",
@@ -36,5 +37,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://guarded-stream-30561.herokuapp.com/"
 }
