--- a/react_repeat/package.json
+++ b/react_repeat/package.json
@@ -14,7 +14,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "set PORT=3006 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -38,5 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://guarded-stream-30561.herokuapp.com/"
+  "proxy": "https://guarded-stream-30561.herokuapp.com"
 }
